update and implement jwt
Signed-off-by: Minecraftschurli <minecraftschurli@gmail.com>